# Atlas

./: .env.example  .gitignore  404.html  ARCHITECTURE_DECISIONS.md  ATLAS_MANIFEST.yaml  Agents.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: architecture.md  bug.md  feature.md  provider.md
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
CONSTITUTION/: index.html
about/architecture/: index.html
about/core-concepts/: index.html
about/philosophy/: index.html
about/roadmap/: index.html
atlas_sdk/: __init__.py  adapter.py  config.py  discovery.py  manager.py  model.py  packaging.py  testing.py  worker.py
cli/: __init__.py  main.py
configs/: demo.yaml  development.yaml  production.yaml  testing.yaml
contributing/: index.html
docs/: index.md  studio-suite.md  vision.md
examples/: demo_runtime.py  demo_session.py
faq/: index.html
installation/: index.html
javascripts/: animations.js
journey/: index.html
models/: index.html
overrides/: main.html
philosophy/: index.html
roadmap/: index.html
scripts/: bootstrap.py  build_context.py  generate_docs.py  generate_registry.py  validate_specs.py
search/: search_index.json
site/: 404.html  index.html
specs/: Capabilities.md  ConfigurationSchema.md  Core.md  ErrorHandling.md  Interface.md  ManifestSchema.md  Protocols.md  Roles.md  RuntimeInvariants.md  Technology.md  Workers.md
stdlib/: index.html
studio-suite/: index.html
(+700 files in other folders)
